gcc/testsuite/rust/compile/wildcard_enum_variant.rs
#![feature(no_core)]
#![no_core]

enum Test {
    // { dg-error "expecting" "" { target *-*-* } .+1 }
    _,
}


